deploy: 2d9b0398ca342bae180ae54d1dfca9994b286c65

--- a/dev/tutorials/l_master.ipynb
+++ b/dev/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e678f7b",
+   "id": "18b7afd8",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4caff05f",
+   "id": "ef83421b",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb860dc5",
+   "id": "f4b2b402",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d6fbb1",
+   "id": "9711fbdc",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ff26288",
+   "id": "667138af",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d293a13",
+   "id": "b1a40c65",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d3656060",
+   "id": "c64fecaf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:11.588730Z",
-     "iopub.status.busy": "2025-02-06T10:02:11.588531Z",
-     "iopub.status.idle": "2025-02-06T10:02:14.500426Z",
-     "shell.execute_reply": "2025-02-06T10:02:14.499917Z"
+     "iopub.execute_input": "2025-02-06T11:04:38.579907Z",
+     "iopub.status.busy": "2025-02-06T11:04:38.579489Z",
+     "iopub.status.idle": "2025-02-06T11:04:41.499468Z",
+     "shell.execute_reply": "2025-02-06T11:04:41.498857Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcc38392",
+   "id": "ed1a2f08",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdad7650",
+   "id": "6e7e04e6",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83330db8",
+   "id": "5df27517",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e64f7ad2",
+   "id": "a4015eab",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f778f8c7",
+   "id": "91cbc27d",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90e14da5",
+   "id": "11e78230",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "748035d0",
+   "id": "9e0aaef1",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faa2b4e1",
+   "id": "70eb14e4",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "689aae04",
+   "id": "8d58ba82",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:14.502592Z",
-     "iopub.status.busy": "2025-02-06T10:02:14.502330Z",
-     "iopub.status.idle": "2025-02-06T10:02:16.350487Z",
-     "shell.execute_reply": "2025-02-06T10:02:16.349987Z"
+     "iopub.execute_input": "2025-02-06T11:04:41.501664Z",
+     "iopub.status.busy": "2025-02-06T11:04:41.501239Z",
+     "iopub.status.idle": "2025-02-06T11:04:43.344737Z",
+     "shell.execute_reply": "2025-02-06T11:04:43.344209Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4261a741",
+   "id": "891b9d04",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "707a4f5e",
+   "id": "d5f63efd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:16.352370Z",
-     "iopub.status.busy": "2025-02-06T10:02:16.352176Z",
-     "iopub.status.idle": "2025-02-06T10:02:16.355402Z",
-     "shell.execute_reply": "2025-02-06T10:02:16.354848Z"
+     "iopub.execute_input": "2025-02-06T11:04:43.346711Z",
+     "iopub.status.busy": "2025-02-06T11:04:43.346343Z",
+     "iopub.status.idle": "2025-02-06T11:04:43.349924Z",
+     "shell.execute_reply": "2025-02-06T11:04:43.349289Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a580531f",
+   "id": "d0b9f1ed",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60a9f508",
+   "id": "13496732",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af099e27",
+   "id": "6991d231",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f671f412",
+   "id": "8c10e8d7",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7a8b2295",
+   "id": "7edf7f69",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:16.357538Z",
-     "iopub.status.busy": "2025-02-06T10:02:16.357066Z",
-     "iopub.status.idle": "2025-02-06T10:02:16.399377Z",
-     "shell.execute_reply": "2025-02-06T10:02:16.398898Z"
+     "iopub.execute_input": "2025-02-06T11:04:43.351803Z",
+     "iopub.status.busy": "2025-02-06T11:04:43.351475Z",
+     "iopub.status.idle": "2025-02-06T11:04:43.393574Z",
+     "shell.execute_reply": "2025-02-06T11:04:43.392979Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c73d6079",
+   "id": "821d3f84",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3923cf54",
+   "id": "fd4c687a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:16.401102Z",
-     "iopub.status.busy": "2025-02-06T10:02:16.400920Z",
-     "iopub.status.idle": "2025-02-06T10:02:16.465570Z",
-     "shell.execute_reply": "2025-02-06T10:02:16.465086Z"
+     "iopub.execute_input": "2025-02-06T11:04:43.395502Z",
+     "iopub.status.busy": "2025-02-06T11:04:43.395136Z",
+     "iopub.status.idle": "2025-02-06T11:04:43.461171Z",
+     "shell.execute_reply": "2025-02-06T11:04:43.460560Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f13b1477",
+   "id": "89b55168",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4706267",
+   "id": "8712b6bc",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c79174bd",
+   "id": "32e9d4b4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:16.467486Z",
-     "iopub.status.busy": "2025-02-06T10:02:16.467303Z",
-     "iopub.status.idle": "2025-02-06T10:02:16.493281Z",
-     "shell.execute_reply": "2025-02-06T10:02:16.492822Z"
+     "iopub.execute_input": "2025-02-06T11:04:43.463153Z",
+     "iopub.status.busy": "2025-02-06T11:04:43.462776Z",
+     "iopub.status.idle": "2025-02-06T11:04:43.488487Z",
+     "shell.execute_reply": "2025-02-06T11:04:43.488003Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df122c95",
+   "id": "d5c571ca",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc9da9ec",
+   "id": "16858071",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a6322b",
+   "id": "ab51c9d7",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "104cfa4e",
+   "id": "f40d8ebc",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97d964e7",
+   "id": "0731380c",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e1946435",
+   "id": "24ccead8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:16.495085Z",
-     "iopub.status.busy": "2025-02-06T10:02:16.494901Z",
-     "iopub.status.idle": "2025-02-06T10:02:16.499146Z",
-     "shell.execute_reply": "2025-02-06T10:02:16.498439Z"
+     "iopub.execute_input": "2025-02-06T11:04:43.490497Z",
+     "iopub.status.busy": "2025-02-06T11:04:43.490132Z",
+     "iopub.status.idle": "2025-02-06T11:04:43.494008Z",
+     "shell.execute_reply": "2025-02-06T11:04:43.493463Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dcedcfa",
+   "id": "028ad78e",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5d599a0c",
+   "id": "4923ce69",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:16.500918Z",
-     "iopub.status.busy": "2025-02-06T10:02:16.500617Z",
-     "iopub.status.idle": "2025-02-06T10:02:16.503693Z",
-     "shell.execute_reply": "2025-02-06T10:02:16.503149Z"
+     "iopub.execute_input": "2025-02-06T11:04:43.495656Z",
+     "iopub.status.busy": "2025-02-06T11:04:43.495477Z",
+     "iopub.status.idle": "2025-02-06T11:04:43.498554Z",
+     "shell.execute_reply": "2025-02-06T11:04:43.498091Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8614e016",
+   "id": "40bcf1b6",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d1ab2030",
+   "id": "ec2f0e2b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:16.505430Z",
-     "iopub.status.busy": "2025-02-06T10:02:16.505254Z",
-     "iopub.status.idle": "2025-02-06T10:02:19.042910Z",
-     "shell.execute_reply": "2025-02-06T10:02:19.042390Z"
+     "iopub.execute_input": "2025-02-06T11:04:43.500410Z",
+     "iopub.status.busy": "2025-02-06T11:04:43.500002Z",
+     "iopub.status.idle": "2025-02-06T11:04:45.988974Z",
+     "shell.execute_reply": "2025-02-06T11:04:45.988391Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f20c8106",
+   "id": "bcbbd8bd",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "997e5ab4",
+   "id": "9e4d2b6c",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9b826bf",
+   "id": "5c897f4f",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b86d82df",
+   "id": "44dbb3d5",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cb1f3484",
+   "id": "826d9f0d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:19.044953Z",
-     "iopub.status.busy": "2025-02-06T10:02:19.044555Z",
-     "iopub.status.idle": "2025-02-06T10:02:19.048264Z",
-     "shell.execute_reply": "2025-02-06T10:02:19.047763Z"
+     "iopub.execute_input": "2025-02-06T11:04:45.990920Z",
+     "iopub.status.busy": "2025-02-06T11:04:45.990735Z",
+     "iopub.status.idle": "2025-02-06T11:04:45.994421Z",
+     "shell.execute_reply": "2025-02-06T11:04:45.993911Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f32c9bd7e20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f7fdbf20a40>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f55e076",
+   "id": "cd3bf41a",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a856d6e",
+   "id": "22290e03",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea922c0a",
+   "id": "d578f758",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b72c0343",
+   "id": "64b12a97",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "96c6d6e0",
+   "id": "d49e27a0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:19.050270Z",
-     "iopub.status.busy": "2025-02-06T10:02:19.049808Z",
-     "iopub.status.idle": "2025-02-06T10:02:19.052892Z",
-     "shell.execute_reply": "2025-02-06T10:02:19.052294Z"
+     "iopub.execute_input": "2025-02-06T11:04:45.996261Z",
+     "iopub.status.busy": "2025-02-06T11:04:45.995894Z",
+     "iopub.status.idle": "2025-02-06T11:04:45.999041Z",
+     "shell.execute_reply": "2025-02-06T11:04:45.998464Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "88dd8269",
+   "id": "e5ec8442",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T10:02:19.054811Z",
-     "iopub.status.busy": "2025-02-06T10:02:19.054453Z",
-     "iopub.status.idle": "2025-02-06T10:02:20.104410Z",
-     "shell.execute_reply": "2025-02-06T10:02:20.103809Z"
+     "iopub.execute_input": "2025-02-06T11:04:46.000851Z",
+     "iopub.status.busy": "2025-02-06T11:04:46.000495Z",
+     "iopub.status.idle": "2025-02-06T11:04:47.059595Z",
+     "shell.execute_reply": "2025-02-06T11:04:47.059050Z"
     }
    },
    "outputs": [
