--- a/main/tutorials/l_master.ipynb
+++ b/main/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a8689417",
+   "id": "4386aade",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23706034",
+   "id": "8ae7538c",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1451c337",
+   "id": "c8d676c4",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0693f348",
+   "id": "087f2eb8",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d1acc1",
+   "id": "a953ddf2",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a0bbff2",
+   "id": "e909b810",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "08aefbc3",
+   "id": "553ea08a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:38.812524Z",
-     "iopub.status.busy": "2025-02-06T09:48:38.812206Z",
-     "iopub.status.idle": "2025-02-06T09:48:42.319010Z",
-     "shell.execute_reply": "2025-02-06T09:48:42.318404Z"
+     "iopub.execute_input": "2025-03-17T11:36:07.456671Z",
+     "iopub.status.busy": "2025-03-17T11:36:07.456298Z",
+     "iopub.status.idle": "2025-03-17T11:36:10.409121Z",
+     "shell.execute_reply": "2025-03-17T11:36:10.408506Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a061b268",
+   "id": "ffe74f1b",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e14869b",
+   "id": "9b1d7eec",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45046a2c",
+   "id": "9c206fad",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcef455b",
+   "id": "7ad25688",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05ca684",
+   "id": "4e063793",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac80fbce",
+   "id": "622654cf",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71d05290",
+   "id": "d46f7e3f",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "524bcb3c",
+   "id": "a9456751",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2bce5181",
+   "id": "4f436667",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:42.321333Z",
-     "iopub.status.busy": "2025-02-06T09:48:42.321035Z",
-     "iopub.status.idle": "2025-02-06T09:48:44.554135Z",
-     "shell.execute_reply": "2025-02-06T09:48:44.553481Z"
+     "iopub.execute_input": "2025-03-17T11:36:10.411727Z",
+     "iopub.status.busy": "2025-03-17T11:36:10.411105Z",
+     "iopub.status.idle": "2025-03-17T11:36:12.442287Z",
+     "shell.execute_reply": "2025-03-17T11:36:12.441682Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f71ab7e0",
+   "id": "4f317748",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "60e440b2",
+   "id": "d7fb9d84",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:44.556235Z",
-     "iopub.status.busy": "2025-02-06T09:48:44.556021Z",
-     "iopub.status.idle": "2025-02-06T09:48:44.559631Z",
-     "shell.execute_reply": "2025-02-06T09:48:44.558977Z"
+     "iopub.execute_input": "2025-03-17T11:36:12.444281Z",
+     "iopub.status.busy": "2025-03-17T11:36:12.443915Z",
+     "iopub.status.idle": "2025-03-17T11:36:12.447589Z",
+     "shell.execute_reply": "2025-03-17T11:36:12.446880Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72ab2658",
+   "id": "36005e82",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7070ca2",
+   "id": "8a176fe6",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c20e6c2",
+   "id": "dca0cc12",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb231d8f",
+   "id": "5ebb0afa",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e4cf9b8d",
+   "id": "b95a9b52",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:44.561767Z",
-     "iopub.status.busy": "2025-02-06T09:48:44.561552Z",
-     "iopub.status.idle": "2025-02-06T09:48:44.610320Z",
-     "shell.execute_reply": "2025-02-06T09:48:44.609723Z"
+     "iopub.execute_input": "2025-03-17T11:36:12.449669Z",
+     "iopub.status.busy": "2025-03-17T11:36:12.449211Z",
+     "iopub.status.idle": "2025-03-17T11:36:12.496377Z",
+     "shell.execute_reply": "2025-03-17T11:36:12.495869Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71adee67",
+   "id": "0565db35",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0553260e",
+   "id": "102307d6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:44.612470Z",
-     "iopub.status.busy": "2025-02-06T09:48:44.612085Z",
-     "iopub.status.idle": "2025-02-06T09:48:44.688763Z",
-     "shell.execute_reply": "2025-02-06T09:48:44.688119Z"
+     "iopub.execute_input": "2025-03-17T11:36:12.498375Z",
+     "iopub.status.busy": "2025-03-17T11:36:12.497931Z",
+     "iopub.status.idle": "2025-03-17T11:36:12.570720Z",
+     "shell.execute_reply": "2025-03-17T11:36:12.570226Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d208cbfc",
+   "id": "58bfb7a7",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bddf4672",
+   "id": "2d8ffd18",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a695b12f",
+   "id": "22109e2b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:44.690868Z",
-     "iopub.status.busy": "2025-02-06T09:48:44.690652Z",
-     "iopub.status.idle": "2025-02-06T09:48:44.721823Z",
-     "shell.execute_reply": "2025-02-06T09:48:44.721274Z"
+     "iopub.execute_input": "2025-03-17T11:36:12.572599Z",
+     "iopub.status.busy": "2025-03-17T11:36:12.572416Z",
+     "iopub.status.idle": "2025-03-17T11:36:12.601753Z",
+     "shell.execute_reply": "2025-03-17T11:36:12.601273Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04f56a84",
+   "id": "5f6a2e5d",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae311b85",
+   "id": "f8867499",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76cd6e77",
+   "id": "cfaa48c8",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f46b1e6b",
+   "id": "7cf5ed2b",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad0ab1ab",
+   "id": "8466c6e1",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "21ce9f5c",
+   "id": "5b1e3893",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:44.724203Z",
-     "iopub.status.busy": "2025-02-06T09:48:44.723734Z",
-     "iopub.status.idle": "2025-02-06T09:48:44.728012Z",
-     "shell.execute_reply": "2025-02-06T09:48:44.727464Z"
+     "iopub.execute_input": "2025-03-17T11:36:12.603768Z",
+     "iopub.status.busy": "2025-03-17T11:36:12.603419Z",
+     "iopub.status.idle": "2025-03-17T11:36:12.608694Z",
+     "shell.execute_reply": "2025-03-17T11:36:12.608095Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9313bd10",
+   "id": "f9c3dd22",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f7bd85e4",
+   "id": "d14a7268",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:44.730186Z",
-     "iopub.status.busy": "2025-02-06T09:48:44.729651Z",
-     "iopub.status.idle": "2025-02-06T09:48:44.732772Z",
-     "shell.execute_reply": "2025-02-06T09:48:44.732277Z"
+     "iopub.execute_input": "2025-03-17T11:36:12.610846Z",
+     "iopub.status.busy": "2025-03-17T11:36:12.610477Z",
+     "iopub.status.idle": "2025-03-17T11:36:12.613518Z",
+     "shell.execute_reply": "2025-03-17T11:36:12.612916Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d7d3d11",
+   "id": "9fc6007d",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "42f29e93",
+   "id": "f05f8a92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:44.734797Z",
-     "iopub.status.busy": "2025-02-06T09:48:44.734449Z",
-     "iopub.status.idle": "2025-02-06T09:48:47.467615Z",
-     "shell.execute_reply": "2025-02-06T09:48:47.466984Z"
+     "iopub.execute_input": "2025-03-17T11:36:12.615273Z",
+     "iopub.status.busy": "2025-03-17T11:36:12.614901Z",
+     "iopub.status.idle": "2025-03-17T11:36:15.241304Z",
+     "shell.execute_reply": "2025-03-17T11:36:15.240687Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24a24e2f",
+   "id": "fd3d0c58",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb5104c2",
+   "id": "a9869b32",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6f6febf",
+   "id": "50efb989",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e86061f",
+   "id": "423cb5af",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "599b93ff",
+   "id": "adef380a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:47.469737Z",
-     "iopub.status.busy": "2025-02-06T09:48:47.469499Z",
-     "iopub.status.idle": "2025-02-06T09:48:47.473426Z",
-     "shell.execute_reply": "2025-02-06T09:48:47.472769Z"
+     "iopub.execute_input": "2025-03-17T11:36:15.243515Z",
+     "iopub.status.busy": "2025-03-17T11:36:15.243135Z",
+     "iopub.status.idle": "2025-03-17T11:36:15.246766Z",
+     "shell.execute_reply": "2025-03-17T11:36:15.246170Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f87945d49a0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f99412c9120>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "505925dd",
+   "id": "51246ef0",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28efdf61",
+   "id": "d3b754d7",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1200f412",
+   "id": "a611671f",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62da71b6",
+   "id": "0d5d5aae",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3c01b424",
+   "id": "417073de",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:47.475442Z",
-     "iopub.status.busy": "2025-02-06T09:48:47.475213Z",
-     "iopub.status.idle": "2025-02-06T09:48:47.478852Z",
-     "shell.execute_reply": "2025-02-06T09:48:47.478179Z"
+     "iopub.execute_input": "2025-03-17T11:36:15.248663Z",
+     "iopub.status.busy": "2025-03-17T11:36:15.248323Z",
+     "iopub.status.idle": "2025-03-17T11:36:15.251487Z",
+     "shell.execute_reply": "2025-03-17T11:36:15.250855Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c52854e1",
+   "id": "159f1cb2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T09:48:47.480640Z",
-     "iopub.status.busy": "2025-02-06T09:48:47.480450Z",
-     "iopub.status.idle": "2025-02-06T09:48:48.602726Z",
-     "shell.execute_reply": "2025-02-06T09:48:48.602138Z"
+     "iopub.execute_input": "2025-03-17T11:36:15.253245Z",
+     "iopub.status.busy": "2025-03-17T11:36:15.252882Z",
+     "iopub.status.idle": "2025-03-17T11:36:16.313160Z",
+     "shell.execute_reply": "2025-03-17T11:36:16.312630Z"
     }
    },
    "outputs": [
@@ -671,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
